# alphautil

./: LICENSE  pyproject.toml
alphautil/: functional.py  plt.py  ticker.py
alphautil/fm/: factor_model.py
alphautil/metrics/: __init__.py
alphautil/ml/: __init__.py  model_selection.py
