[tool.poetry]
name = "alphautil"
version = "0.0.0"
description = ""
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
